--- a/trust-ed-chain-backend/package.json
+++ b/trust-ed-chain-backend/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
@@ -23,6 +22,10 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "dotenv": "^17.2.3",
+    "ethers": "^6.16.0",
+    "hardhat": "^2.22.17",
     "nodemon": "^3.1.11"
   }
 }
