--- a/trust-ed-chain-frontend/package.json
+++ b/trust-ed-chain-frontend/package.json
@@ -15,6 +15,7 @@
     "axios-mock-adapter": "^2.1.0",
     "clsx": "^2.1.1",
     "ethers": "^6.15.0",
+    "lucide-react": "^0.562.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
